Fix Supabase Connection Error

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Supabase Configuration
+# Get these values from your Supabase project dashboard
+# If not configured, the app will work but database features will be disabled
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
